--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "desafio-entregable",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,6 +11,18 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6"
-  }
+    "express-handlebars": "^6.0.6",
+    "socket.io": "^4.5.4"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alejo-martinez/desafio-entregable.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/alejo-martinez/desafio-entregable/issues"
+  },
+  "homepage": "https://github.com/alejo-martinez/desafio-entregable#readme",
+  "description": ""
 }
