--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.4"
   },
