--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "foundation-sites": "^6.7.5",
+    "mingcute_icon": "^2.7.1",
     "mongoose": "^6.9.1",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
@@ -23,7 +25,8 @@
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "tailwindcss": "^3.2.7"
   },
   "repository": {
     "type": "git",
