--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "commander": "^10.0.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "foundation-sites": "^6.7.5",
+    "jsonwebtoken": "^9.0.0",
     "mingcute_icon": "^2.7.1",
     "mongoose": "^6.9.1",
     "mongoose-paginate-v2": "^1.7.1",
