--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
-PORT=
-MONGO_URL=
-ADMIN_NAME=
-ADMIN_PASSWORD=
+PORT=3005
+MONGO_URL=mongodb+srv://AlejoM:cluster0selacome@ecommerce.wuolt09.mongodb.net/?retryWrites=true&w=majority
+ADMIN_NAME=adminCoder@coder.com
+ADMIN_PASSWORD=adminCod3r123
