--- a/src/.env
+++ b/src/.env
@@ -2,3 +2,5 @@ PORT=3005
 MONGO_URL=mongodb+srv://AlejoM:cluster0selacome@ecommerce.wuolt09.mongodb.net/?retryWrites=true&w=majority
 ADMIN_NAME=adminCoder@coder.com
 ADMIN_PASSWORD=adminCod3r123
+USER_MAIL =alejoomartinex11@gmail.com
+PASS_MAIL =lxhzkdgddtbrzwmn
