--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.5.4",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "winston": "^3.8.2"
   },
   "repository": {
     "type": "git",
