--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon src/server.js development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
